force-app/main/default/objects/pse__Project_Actuals_Converted__c/fields/pse__NRV_Margin__c.field-meta.xml
<CustomField>
    <fullName>pse__NRV_Margin__c</fullName>
    <description>Individual value of Billings and Pass-Through Billings minus Total Costs. Derived from this project alone, separate from child project roll ups.</description>
    <formula>pse__NRV_Billings__c + pse__NRV_Pass_Through_Billings__c - pse__NRV_Internal_Costs__c - pse__NRV_External_Costs__c - pse__NRV_Expense_Costs__c - pse__NRV_Other_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Individual value of Billings and Pass-Through Billings minus Total Costs. Derived from this project alone, separate from child project roll ups.</inlineHelpText>
    <label>Individual Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>