force-app/main/default/objects/pse__Project_Actuals_Converted__c/fields/pse__Time_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period_Type__c</fullName>
    <formula>TEXT( pse__Time_Period__r.pse__Type__c )</formula>
    <label>Time Period Type</label>
    <type>Text</type>
</CustomField>